--- a/src/app/pages/calendar/calendar.component.html
+++ b/src/app/pages/calendar/calendar.component.html
@@ -9,7 +9,7 @@
         </div>
     </div>
     <section class="calendar">
-        <full-calendar [options]="calendarOptions" headerToolbar='headerToolbar' [events]="$calendarEvents()">
+        <full-calendar [options]="calendarOptions" headerToolbar='headerToolbar' [events]="$calendarEvents()" class="calendar-body">
             <ng-template #eventContent let-arg>
                 <div class="body" routerLink='/events/{{arg.event.id}}'>
                     <div class="wrapper">
