--- a/src/styles.css
+++ b/src/styles.css
@@ -76,7 +76,7 @@ section{
     padding: 0;
     display: flex;
     flex-wrap: nowrap;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: center;
     gap: 1rem;
     padding-bottom: 10px;
