--- a/src/app/pages/events-details/events-details.component.html
+++ b/src/app/pages/events-details/events-details.component.html
@@ -30,7 +30,7 @@
 
         <div class="locatie">
             <h4>Locatie:</h4>
-            <h4 class="loc">{{currentEvent && currentEvent.locatie}}</h4>
+            <h4 class="loc">{{currentEvent && locationString}}</h4>
         </div>
         <div class="edit" (click)="showForm()">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
