--- a/src/app/pages/calendar/calendar.component.html
+++ b/src/app/pages/calendar/calendar.component.html
@@ -2,7 +2,7 @@
     <div class="spacer"></div>
     <div class="links">
         <div class="today">
-            <a class='cta-3' routerLink="#">Your Calendar</a>
+            <a class='cta-3' routerLink="/dashboard">Go to Dashboard</a>
         </div>
         <div class="make-event">
             <a class='cta cta-make' (click)="showForm()">Make New Event +</a>
