--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
  <section class="events-section">
     <div class="links">
         <div class="today">
-            <a class='cta-3' routerLink="#">Your Events For Today</a>
+            <div class='cta-3'>Your Events For Today</div>
         </div>
         <div class="all-events">
             <a class='cta-3 red' routerLink="/events">All Your Events ></a>
