--- a/src/app/pages/events-details/events-details.component.html
+++ b/src/app/pages/events-details/events-details.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="heading">
+    <div class="heading event-heading">
         <div class="nav-back" (click)="goToEvents()">
             <p>View All Events</p>
         </div>
