--- a/src/app/pages/events/events.component.html
+++ b/src/app/pages/events/events.component.html
@@ -3,7 +3,7 @@
 
         <div class="links">
             <div class="today">
-                <a class='cta-3' routerLink="#">Your Events:</a>
+                <a class='cta-3' (click)="goToDashboard()">Go to dashboard</a>
             </div>
             <div class="make-event">
                 <a class='cta cta-make' (click)="showForm()">Make New Event +</a>
