--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-sm bg-danger text-light sticky-top">
+<nav class="navbar navbar-expand-md bg-danger text-light sticky-top">
     <div class="container-fluid d-flex justify-content-between">
         
-        <h1 class="navbar-brand branding col-2 pt-3"><a routerLink="/" class="text-light text-decoration-none fw-bold">
+        <h1 class="navbar-brand branding col-2 pt-4"><a routerLink="/" class="text-light text-decoration-none fw-bold">
             Q-EVENTS
         </a>
         </h1>
