--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-own">
  <section class="events-section">
     <div class="links">
         <div class="today">
