--- a/src/app/components/event-card/event-card.component.css
+++ b/src/app/components/event-card/event-card.component.css
@@ -1,11 +1,11 @@
 .card{
-    padding: 10px 1rem;
+    padding: 10px;
     border-radius: 3px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     gap: 10px;
-    width: 340px;
+    width: 365px;
     height: 185px;
     border: 1px solid #000;
     box-shadow: 5px 5px 10px rgba(0,0,0,0.4);
@@ -23,13 +23,19 @@
     justify-content: space-between;
 }
 
+h3{
+    flex: 1;
+    font-size: 20px !important;
+}
+
 .date-flex{
+    flex: 1;
     display: flex;
     gap: 5px;
 }
 
 .date-flex svg{
-    height: 1.5rem;
+    height: 1.2rem;
 
 }
 
@@ -38,6 +44,10 @@
 }
 .date-flex svg.late{
     stroke: var(--main-color) !important;
+}
+
+.date-flex .date-time{
+    font-size: 14px;
 }
 
 .omschrijving{
