--- a/src/app/pages/events-details/events-details.component.css
+++ b/src/app/pages/events-details/events-details.component.css
@@ -103,3 +103,12 @@ h4{
     height: 3rem;
     stroke: rgb(25, 25, 198)
 }
+
+.cntr{
+    width: 500px;
+    height: 800px;
+}
+p-multiselect{
+    width: 100%;
+    height: 100%;
+}
