--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -23,6 +23,7 @@
             <a id="register" routerLink="/register">Don't have an account yet? Register</a>
         </div>
 
+        <div class='mini-loader' *ngIf="loading()"></div>
     </form>
     
 </section>
