--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -35,6 +35,8 @@
         <div class="form-control-s register">
             <a id="register" routerLink="/login">Already have an account? Login</a>
         </div>
+        <div class='mini-loader' *ngIf="loading()"></div>
+
     </form>
     
 </section>
