--- a/src/app/components/event-form/event-form.component.css
+++ b/src/app/components/event-form/event-form.component.css
@@ -4,7 +4,7 @@
     height: 100vh;
     top: 0;
     left: 0;
-    padding-top: 9rem;
+    padding-top: 7rem;
     display: flex;
     justify-content: center;
     /* align-items: center; */
@@ -15,10 +15,11 @@
 }
 
 .form{
+    position: relative;
     width: 80%;
     max-width: 450px;
     height: max-content;
-    max-height: 80vh;
+    max-height: 95vh;
     background-color: #ccc;
     padding: 10px 1rem;
     border-radius: 2px;
@@ -37,15 +38,13 @@
 .form-control-s{
     display: flex;
     flex-direction: column;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 .form-control-s label{
     text-transform: capitalize;
     opacity: 0.95;
 }
-
-
 
 .form-control-s input{
     padding: 2px 5px;
@@ -54,8 +53,6 @@
     outline: none;
     
 }
-
-
 .form-control-s textarea{
     min-height: 100px;
     border: none;
@@ -65,7 +62,6 @@
     border: 1px solid rgba(0,0,0,0.5);
     outline: none;
 }
-
 
 .form-control-s #submit{
     padding: 6px 20px;
@@ -78,119 +74,7 @@
     background-color: var(--main-color);
 }
 
-.form-control-s .deelnemers{
+.form-control-s.deelnemers{
     width: 100%;
-}
-
-.form-control-s.attachment {
-    position: relative;
-    overflow: hidden;
-    display: inline-block;
-  }
-  
-  .form-control-s.attachment input[type="file"] {
-    position: absolute;
-    top: 0;
-    right: 0;
-    margin: 0;
-    margin-top: 10px;
-    padding: 0;
-    font-size: 20px; /* Adjust the font size as needed */
-    cursor: pointer;
-    opacity: 0;
-    z-index: 300;
-  }
-  
-  .form-control-s.attachment label {
-    display: inline-block;
-    background-color: var(--main-color);
-    padding: 5px 10px;
-  }
-  
-
-  .text-current-files{
-    color: #000;
-    font-style: italic;
-    text-decoration: underline;
-  }
-
-
-/* .form-control-s.attachment span{
-    font-weight: 500;
-    color: #000 !important;
-}
-
-.form-control-s.attachment {
-    display: inline-block;
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-}
-
-.form-control-s.attachment input[type="file"] {
-   display: none;
-
-    cursor: pointer;
-}
-
-.form-control-s.attachment label {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #4CAF50;
-    color: white;
-    cursor: pointer;
-} */
-
-/* Sync Fusion Styling */
-
-.e-multiselect.e-input-group .e-multi-select-wrapper {
-    width: 100%;
-    background-color: #fff;
-}
-.e-multiselect .e-delim-values {
-    -webkit-text-fill-color: var(--main-color);
-    font-size: 16px;
-    /* font-family: cursive; */
-}
-
-.e-multiselect.e-input-group.e-control-wrapper.e-input-focus::before, .e-multiselect.e-input-group.e-control-wrapper.e-input-focus::after {
-    background: var(--main-color);
-}
-
-.e-popup .e-checkbox-wrapper .e-frame.e-check, .e-popup .e-checkbox-wrapper:hover .e-frame.e-check {
-    background-color: var(--secund-color);
-    color: white;
-}
-
-.e-multiselect input.e-dropdownbase::placeholder {
-    font-size: 16px;
-}
-
-
-span .e-searcher{
-    width: 100% !important;
-}
-
-ejs-multiselect{
-    width: 100%;
-    cursor: pointer;
-}
-
-.e-multiselect{
-    width: 100%;
-}
-
-.e-searcher{
-    width: 100%;
-}
-
-.e-zero-size{
-    display: none;
-}
-
-ejs-multiselect .e-searcher input.e-dropdownbase{
-    width: 98%;
-    padding:0;
-    padding-left: 10px;
-    border: none;
+    margin: 1rem 0 3rem;
 }
