--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-@import '../node_modules/@syncfusion/ej2-base/styles/material.css';
-@import '../node_modules/@syncfusion/ej2-buttons/styles/material.css';
-@import '../node_modules/@syncfusion/ej2-dropdowns/styles/material.css';
-@import '../node_modules/@syncfusion/ej2-inputs/styles/material.css';
-@import '../node_modules/@syncfusion/ej2-popups/styles/material.css';
-@import '../node_modules/@syncfusion/ej2-lists/styles/material.css';
-@import '../node_modules/@syncfusion/ej2-angular-dropdowns/styles/material.css';
-@import '../node_modules/@syncfusion/ej2-base/styles/material.css';
-@import '../node_modules/@syncfusion/ej2-buttons/styles/material.css';
-@import '../node_modules/@syncfusion/ej2-inputs/styles/material.css';
-@import '../node_modules/@syncfusion/ej2-popups/styles/material.css';
-@import '../node_modules/@syncfusion/ej2-angular-inputs/styles/material.css';
-
 @import "~bootstrap/dist/css/bootstrap.css";
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Kanit:ital,wght@0,300;0,500;1,400&family=Lakki+Reddy');
+
+
 :root{
     --main-color:  #E01B24;
     --secund-color: #2A863E;
@@ -31,6 +20,13 @@ html{
     padding: 0;
     box-sizing: border-box;
     font-family: 'Kanit', sans-serif;
+}
+
+.files .dz-message{
+    min-height: 100px !important;
+}
+.files .dz-text{
+    color: red !important;
 }
 
 
@@ -83,7 +79,7 @@ section{
 
 .container-own{
     width: 90%;
-    min-width: 370px;
+    min-width: 345px;
     margin: 0 auto;
 }
 
@@ -91,13 +87,13 @@ section{
 
 .event-card-container-overflow{
     width: 100%;
+    min-height: 250px;
     overflow-x: scroll;
-    padding: 0;
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
     gap: 1rem;
-    padding-bottom: 10px;
+    padding: 10px 0;
 }
 
 .event-card-container-overflow::-webkit-scrollbar {
@@ -146,3 +142,133 @@ section{
 input.invalid{
     border: 1px solid var(--main-color);
 }
+
+/* MINI LOADER */
+.mini-loader {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 5000;
+    background: rgba(0,0,0,0.9);
+    transition: opacity 0.75s, visibility 0.75s;
+}
+    
+.mini-loader--hidden {
+    opacity: 0;
+    visibility: hidden;
+}
+    
+.mini-loader::after {
+    content: "";
+    width: 35px;
+    height: 35px;
+    border: 5px solid #dddddd;
+    border-top-color: var(--main-color);
+    border-radius: 50%;
+    animation: loadingCircle 0.75s ease infinite;
+}
+    
+@keyframes loadingCircle {
+    from {
+        transform: rotate(0turn);
+    }
+    to {
+        transform: rotate(1turn);
+    }
+}
+
+
+/* Skeleton */
+:root {
+    --loading-grey: #ededed;
+  }
+
+  .skeleton-body{
+    margin: 1rem;
+    height: 100%;
+    min-height: 200px;
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 1rem;
+  }
+
+ .card {
+    width: 320px;
+    background-color: #fff;
+    border-radius: 6px;
+    overflow: hidden;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, .12);
+    display: flex;
+
+  }
+  
+  .image {
+    height: 200px;
+    flex: 2;
+}
+
+.image img {
+    display: block;
+    width: 100%;
+    height: inherit;
+    object-fit: cover;
+}
+
+.content {
+    padding: 2rem 1.8rem;
+    flex: 2;
+  }
+  
+  h4 {
+    margin: 0 0 1rem;
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+  }
+  
+  .description {
+    font-size: 1rem;
+    line-height: 1.4rem;
+  }
+  
+  .loading .image,
+  .loading h4,
+  .loading .description {
+    background-color: var(--loading-grey);
+    background: linear-gradient(
+      100deg,
+      rgba(255, 255, 255, 0) 40%,
+      rgba(255, 255, 255, .5) 50%,
+      rgba(255, 255, 255, 0) 60%
+    ) var(--loading-grey);
+    background-size: 200% 100%;
+    background-position-x: 180%;
+    animation: 1s loading ease-in-out infinite;
+  }
+  
+  @keyframes loading {
+    to {
+      background-position-x: -20%;
+    }
+  }
+  
+  .loading h4 {
+    min-height: 1.6rem;
+    border-radius: 4px;
+    animation-delay: .05s;
+  }
+  
+  .loading .description {
+    min-height: 4rem;
+    border-radius: 4px;
+    animation-delay: .06s;
+  }
+
