--- a/src/app/components/event-form/event-form.component.css
+++ b/src/app/components/event-form/event-form.component.css
@@ -34,6 +34,17 @@
 
 }
 
+.close{
+    position: absolute;
+    top: 15px;
+    right: 1rem;
+    color: red;
+    padding: 5px;
+    cursor: pointer;
+}
+
+
+
 
 .form-control-s{
     display: flex;
